# irrlicht

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindWebP.cmake
include/: CMeshBuffer.h  IAnimatedMesh.h  IAttributes.h  ICursorControl.h  IFileArchive.h  IGUIButton.h  IGUIElement.h  IGUIEnvironment.h  IGUIFont.h  IGUISkin.h  IGUISpriteBank.h  IImage.h  IImageLoader.h  ILogger.h  IMaterialRenderer.h  IMeshBuffer.h  IMeshManipulator.h  ISceneNode.h  IShaderConstantSetCallBack.h  ITexture.h  ITimer.h  IrrCompileConfig.h  SAnimatedMesh.h  SSkinMeshBuffer.h  vector3d.h
source/Irrlicht/: CFileSystem.cpp  CFileSystem.h  CGLTFMeshFileLoader.cpp  CGLTFMeshFileLoader.h  CGUIButton.cpp  CGUIButton.h  CGUISkin.cpp  CGUISkin.h  CIrrDeviceLinux.cpp  CMTFileLoader.cpp  CMTFileLoader.h  CMakeLists.txt  COBJMeshFileLoader.cpp  COBJMeshFileLoader.h  CWriteFile.cpp  CZipReader.h
source/Irrlicht/tests/: CMakeLists.txt  inMemoryFile.cpp  inMemoryFile.h  test.cpp  testCGLTFMeshFileLoader.cpp  testCOBJMeshFileLoader.cpp
source/Irrlicht/tests/assets/: blender_cube_tcoords_16bit.gltf  blender_cube_tcoords_8bit.gltf  snowman_trs.gltf
